--- a/src/components/MainApp/mainApp.scss
+++ b/src/components/MainApp/mainApp.scss
@@ -1,21 +1,17 @@
+img {
+  max-width:100%;
+}
 .main {
-  max-width: 1920px;
-  &__body {
-    // display: flex;
-    margin: 0 auto;
-    padding: 151px 0 142px;
-    position: relative;
-  }
-  &__container-decoration {
-    position: absolute;
-    // top: 0;
-    // left: 80px;
-    left: 5em;
+  position: relative;
+  &__bg {
+    display: block;
+    width: 100%;
+    height: auto;
   }
   &__container-item {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    position: absolute;
+    top: 17%;
+    right: 16%;
   }
   &__item-grid {
     display: grid;
@@ -24,7 +20,6 @@
   }
   &__item-1 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 185px;
@@ -37,7 +32,6 @@
   }
   &__item-2 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 185px;
@@ -50,7 +44,6 @@
   }
   &__item-3 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 185px;
@@ -63,7 +56,6 @@
   }
   &__item-4 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 185px;
@@ -168,17 +160,36 @@
     }
   }
 }
+.img-el {
+  position: absolute;
+  top: 30.7%;
+  left: 20%;
+  width: 22.1875%;
+  height: 11.8181%;
+  background: url(../../img/journey.png) no-repeat center/cover;
+}
+.img-el2 {
+  position: absolute;
+  top: 61%;
+  left: 29%;
+  width: 21.1458%;
+  height: 8.6363%;
+  background: url(../../img/figure.png) no-repeat center/cover;
+}
 
-.image-wrapper {
-  margin-top: 66px;
+.button-container {
+  position: absolute;
+  top: 59.5%;
+  left: 20.15%;
+  // width: 9.375%;
+  // height: 5.3030%;
 }
 .button-wrapper {
   position: relative;
-  float: left;
 }
 .corner1 {
   position: absolute;
-  top: 16px;
+  top: 15px;
   left: -15px;
 }
 .corner2 {
@@ -203,6 +214,7 @@
   background-origin: border-box;
   background-clip: content-box, border-box;
   background-color: #000000;
+  cursor: pointer;
 
   font-family: 'Museo Sans Cyrl';
   font-size: 14px;
