--- a/src/components/MainApp/mainApp.scss
+++ b/src/components/MainApp/mainApp.scss
@@ -1,5 +1,5 @@
 img {
-  max-width:100%;
+  max-width: 100%;
 }
 .main {
   position: relative;
@@ -18,125 +18,112 @@ img {
     grid-template-columns: 1fr 1fr;
     gap: 10px;
   }
-  &__item-1 {
+  &__item {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 185px;
     height: 185px;
-    background: linear-gradient(
-      135deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.03) 80%
-    );
-  }
-  &__item-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 185px;
-    height: 185px;
-    background: linear-gradient(
-      225deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.03) 80%
-    );
-  }
-  &__item-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 185px;
-    height: 185px;
-    background: linear-gradient(
-      45deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.03) 80%
-    );
-  }
-  &__item-4 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 185px;
-    height: 185px;
-    background: linear-gradient(
-      315deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.03) 80%
-    );
+    cursor: pointer;
   }
 }
-.main__item {
-  &-1:hover {
-    // transform: scale(0.95);
-    // transform-origin: bottom right;
-    background: linear-gradient(
-      135deg,
-      transparent 40%,
-      rgba(255, 255, 255, 0.07) 80%
-    );
-    border-style: solid;
-    border-width: 1px;
-    border-image-source: linear-gradient(
-      135deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.2) 70%
-    );
-    border-image-slice: 1;
-  }
-  &-2:hover {
-    // transform: scale(0.95);
-    // transform-origin: bottom left;
-    background: linear-gradient(
-      225deg,
-      transparent 40%,
-      rgba(255, 255, 255, 0.07) 80%
-    );
-    border-style: solid;
-    border-width: 1px;
-    border-image-source: linear-gradient(
-      225deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.2) 70%
-    );
-    border-image-slice: 1;
-  }
-  &-3:hover {
-    // transform: scale(0.95);
-    // transform-origin: top right;
-    background: linear-gradient(
-      45deg,
-      transparent 40%,
-      rgba(255, 255, 255, 0.07) 80%
-    );
-    border-style: solid;
-    border-width: 1px;
-    border-image-source: linear-gradient(
-      45deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.2) 70%
-    );
-    border-image-slice: 1;
-  }
-  &-4:hover {
-    // transform: scale(0.95);
-    // transform-origin: top left;
-    background: linear-gradient(
-      315deg,
-      transparent 40%,
-      rgba(255, 255, 255, 0.07) 80%
-    );
-    border-style: solid;
-    border-width: 1px;
-    border-image-source: linear-gradient(
-      315deg,
-      transparent 60%,
-      rgba(255, 255, 255, 0.2) 70%
-    );
-    border-image-slice: 1;
-  }
+.bg-item1 {
+  background: linear-gradient(
+    135deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.03) 80%
+  );
 }
+.bg-item2 {
+  background: linear-gradient(
+    225deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.03) 80%
+  );
+}
+.bg-item3 {
+  background: linear-gradient(
+    45deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.03) 80%
+  );
+}
+.bg-item4 {
+  background: linear-gradient(
+    315deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.03) 80%
+  );
+}
+.bg-item1:hover {
+  // transform: scale(0.95);
+  // transform-origin: bottom right;
+  background: linear-gradient(
+    135deg,
+    transparent 40%,
+    rgba(255, 255, 255, 0.07) 80%
+  );
+  border-style: solid;
+  border-width: 1px;
+  border-image-source: linear-gradient(
+    135deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.2) 70%
+  );
+  border-image-slice: 1;
+}
+.bg-item2:hover {
+  // transform: scale(0.95);
+  // transform-origin: bottom left;
+  background: linear-gradient(
+    225deg,
+    transparent 40%,
+    rgba(255, 255, 255, 0.07) 80%
+  );
+  border-style: solid;
+  border-width: 1px;
+  border-image-source: linear-gradient(
+    225deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.2) 70%
+  );
+  border-image-slice: 1;
+}
+.bg-item3:hover {
+  // transform: scale(0.95);
+  // transform-origin: top right;
+  background: linear-gradient(
+    45deg,
+    transparent 40%,
+    rgba(255, 255, 255, 0.07) 80%
+  );
+  border-style: solid;
+  border-width: 1px;
+  border-image-source: linear-gradient(
+    45deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.2) 70%
+  );
+  border-image-slice: 1;
+}
+.bg-item4:hover {
+  // transform: scale(0.95);
+  // transform-origin: top left;
+  background: linear-gradient(
+    315deg,
+    transparent 40%,
+    rgba(255, 255, 255, 0.07) 80%
+  );
+  border-style: solid;
+  border-width: 1px;
+  border-image-source: linear-gradient(
+    315deg,
+    transparent 60%,
+    rgba(255, 255, 255, 0.2) 70%
+  );
+  border-image-slice: 1;
+}
+
 .item-main {
   &__wrapper {
     display: flex;
@@ -182,7 +169,7 @@ img {
   top: 59.5%;
   left: 20.15%;
   // width: 9.375%;
-  // height: 5.3030%;
+  // height: 5.303%;
 }
 .button-wrapper {
   position: relative;
